<resources>
    <string name="app_name">Practice-Project-Android</string>
    <string name="teq">Teq</string>
    <string name="copyright_2021">CopyRight 2021</string>
    <string name="image">Image</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="popular">Popular Movies</string>
    <string name="up_coming_movie">Up Coming Movies</string>
    <string name="top_rate_movies">Top Rate Movies</string>
    <string name="now_playing_movies">Now Playing Movies</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="overview">Overview:</string>
    <string name="trailer">Trailer:</string>
    <string name="more_photos">More photos:</string>
    <string name="more_poster">Poster:</string>
    <string name="cast">Cast:</string>
    <string name="crew">Crew:</string>
    <string name="reviews">Reviews:</string>
    <string name="personal_info">Person Info</string>
    <string name="known_for">Know For</string>
    <string name="known_credits">Know Credits</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday:</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="career">Career</string>
    <string name="biography">Biography</string>
    <string name="about">About:</string>
    <string name="search_movie">Search movie:</string>
    <string name="popularity">Popularity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>