<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_splash"
    android:padding="10dp"
    tools:context=".view.splash.SplashActivity">


    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/image"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-99dp"
        android:indeterminateDrawable="@drawable/progressbar" />

    <TextView
        android:id="@+id/tv_teq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_copyright"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/teq" />

    <TextView
        android:id="@+id/tv_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright_2021"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        />

</RelativeLayout>