<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="40dp"
    android:layout_centerInParent="true"
    tools:context=".view.login.LoginActivity">

    <ImageView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/img_logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image"
        android:src="@drawable/logo" />



    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        android:background="@drawable/custom_edt"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:paddingVertical="15dp"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray" />


    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edt_username"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_edt"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingHorizontal="10dp"
        android:paddingVertical="15dp"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_btn_login"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold" />
    <LinearLayout
        android:id="@+id/relativelayout_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btn_login">

        <View
            android:layout_weight="1"
            android:id="@+id/dividerLeft"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#DDD" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/or"
            android:textColor="@color/color_edt"
            android:textSize="16sp" />

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#DDD" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/relativelayout_divider">

        <ImageView
            android:id="@+id/iv_logo_face"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="70dp"
            android:background="@drawable/corner_icon"
            android:contentDescription="@string/image"
            android:padding="10dp"
            android:src="@drawable/logo_facebook" />
        <ImageView
            android:id="@+id/iv_logo_google"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:src="@drawable/logo_google"
            android:contentDescription="@string/image"
            android:background="@drawable/corner_icon"
            android:layout_marginEnd="70dp"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:indeterminateDrawable="@drawable/oranger_progressbar"
        app:layout_constraintTop_toTopOf="@+id/btn_login"
        app:layout_constraintBottom_toBottomOf="@+id/btn_login"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>