<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="4dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:collapsedTitleTextAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:contentScrim="@color/white"
            app:expandedTitleGravity="center|bottom"
            app:expandedTitleTextAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:titleCollapseMode="scale">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?attr/actionBarSize"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgAvatar"
                    android:layout_width="130dp"
                    android:layout_height="170dp"
                    android:layout_marginTop="@dimen/layout_margin_16dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintDimensionRatio="H,138:175"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/border_radius_8dp"
                    tools:srcCompat="@tools:sample/avatars"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_Name"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/layout_margin_32dp"
                    android:layout_marginVertical="@dimen/layout_margin_16dp"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imgAvatar"
                    tools:text="@tools:sample/full_names" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/body_layout"
                layout="@layout/personal_info_layout" />





            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtBiography"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/layout_margin_16dp"
                android:layout_marginTop="@dimen/layout_margin_16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/body_layout"
                tools:text="@tools:sample/lorem" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/llCareer"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin_16dp"
                android:text="@string/career"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtBiography" />



            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/llCareerAsCast"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin_16dp"
                android:text="@string/cast"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llCareer" />




            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/llCareerAsCrew"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin_8dp"
                android:text="@string/crew"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llCareerAsCast" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>